force-app/main/default/objects/Reviews__c/Reviews__c.object-meta.xml
<CustomObject>
    <description>Track reviews left by Ubiquity clients from various sources.</description>
    <label>Review</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Reviews Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>