force-app/main/default/objects/Reviews__c/fields/Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Duplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if this review is a duplicate entry to give credit to another UBQT team member.   If a review mentions 2 UBQT team members, enter one review with &apos;duplicate&apos; unchecked and a second entirely different review with &apos;duplicate&apos; checked</description>
    <inlineHelpText>Check if this review is a duplicate entry to give credit to another UBQT team member.   If a review mentions 2 UBQT team members, enter one review with &apos;duplicate&apos; unchecked and a second entirely different review with &apos;duplicate&apos; checked</inlineHelpText>
    <label>Duplicate</label>
    <type>Checkbox</type>
</CustomField>