force-app/main/default/objects/Reviews__c/fields/Last_Interaction__c.field-meta.xml
<CustomField>
    <fullName>Last_Interaction__c</fullName>
    <description>Date of Last Interaction with Ubiquity Team Member</description>
    <inlineHelpText>Date of Last Interaction with Ubiquity Team Member</inlineHelpText>
    <label>Last Interaction</label>
    <type>Date</type>
</CustomField>