force-app/main/default/objects/Reviews__c/fields/Most_Recent_Ubiquity_Contact__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Ubiquity_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of Ubiquity Team Member who last interacted with Client</description>
    <inlineHelpText>Name of Ubiquity Team Member who last interacted with Client</inlineHelpText>
    <label>Most Recent Ubiquity Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reviews</relationshipLabel>
    <relationshipName>Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>