force-app/main/default/objects/Reviews__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Internal notes</description>
    <inlineHelpText>Internal notes</inlineHelpText>
    <label>Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>