force-app/main/default/objects/Reviews__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description>Rating given on Review site</description>
    <inlineHelpText>Rating given on Review site</inlineHelpText>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <color>#CC0000</color>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <color>#FF0000</color>
                <label>2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <color>#FF6600</color>
                <label>3</label>
            </value>
            <value>
                <fullName>4</fullName>
                <color>#009900</color>
                <label>4</label>
            </value>
            <value>
                <fullName>5</fullName>
                <color>#33CC00</color>
                <label>5</label>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>