force-app/main/default/objects/Reviews__c/fields/Rating_Scale__c.field-meta.xml
<CustomField>
    <fullName>Rating_Scale__c</fullName>
    <inlineHelpText>What scale is the rating based on?</inlineHelpText>
    <label>Rating Scale</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-5</fullName>
            </value>
            <value>
                <fullName>1-10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>