force-app/main/default/objects/Reviews__c/fields/Review_Categories__c.field-meta.xml
<CustomField>
    <fullName>Review_Categories__c</fullName>
    <description>Categories related to Review - select as many as are applicable</description>
    <inlineHelpText>Categories related to Review - select as many as are applicable</inlineHelpText>
    <label>Review Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payroll Submission</fullName>
            </value>
            <value>
                <fullName>Loans</fullName>
            </value>
            <value>
                <fullName>Rollovers</fullName>
            </value>
            <value>
                <fullName>Transitions</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>System</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Response Time</fullName>
            </value>
            <value>
                <fullName>General Servicing</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Implementations</fullName>
            </value>
            <value>
                <fullName>Fees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>