force-app/main/default/objects/Reviews__c/fields/Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Date__c</fullName>
    <description>Date Review was left by Client</description>
    <inlineHelpText>Date Review was left by Client</inlineHelpText>
    <label>Review Date</label>
    <type>Date</type>
</CustomField>