force-app/main/default/objects/Reviews__c/fields/Review_Source__c.field-meta.xml
<CustomField>
    <fullName>Review_Source__c</fullName>
    <description>Site where Review was left</description>
    <inlineHelpText>Site where Review was left</inlineHelpText>
    <label>Review Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Google Review</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>TrustPilot</fullName>
            </value>
            <value>
                <fullName>Better Business Bureau (BBB)</fullName>
            </value>
            <value>
                <fullName>G2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>