force-app/main/default/objects/Reviews__c/fields/Review_Text__c.field-meta.xml
<CustomField>
    <fullName>Review_Text__c</fullName>
    <description>Copy and paste Review text from source</description>
    <inlineHelpText>Copy and paste Review text from source</inlineHelpText>
    <label>Review Text</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>