force-app/main/default/objects/Reviews__c/fields/Review_Type__c.field-meta.xml
<CustomField>
    <fullName>Review_Type__c</fullName>
    <formula>IF(ISPICKVAL(Rating__c, &quot;1&quot;), &quot;Negative&quot;,
IF(ISPICKVAL(Rating__c, &quot;2&quot;), &quot;Negative&quot;,
IF(ISPICKVAL(Rating__c, &quot;4&quot;), &quot;Positive&quot;,
IF(ISPICKVAL(Rating__c, &quot;5&quot;), &quot;Positive&quot;, &quot;Neutral&quot;))))</formula>
    <label>Review Type</label>
    <type>Text</type>
</CustomField>