force-app/main/default/objects/Reviews__c/fields/Reviewer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reviewer Contact, if available</description>
    <inlineHelpText>Reviewer Contact, if available</inlineHelpText>
    <label>Reviewer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reviews (Reviewer Contact)</relationshipLabel>
    <relationshipName>Reviews_Given</relationshipName>
    <type>Lookup</type>
</CustomField>