force-app/main/default/objects/Reviews__c/fields/Reviewer_Type__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Type__c</fullName>
    <description>What was the Role of the person leaving the review?</description>
    <inlineHelpText>What was the Role of the person leaving the review?</inlineHelpText>
    <label>Reviewer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sponsor and/or Trustee</fullName>
            </value>
            <value>
                <fullName>Saver</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>