force-app/main/default/objects/Reviews__c/fields/Reviews__c.field-meta.xml
<CustomField>
    <fullName>Reviews__c</fullName>
    <description>Counts Reviews for a given Plan</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Counts Reviews for a given Plan</inlineHelpText>
    <label>Reviews</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>