force-app/main/default/objects/Reviews__c/fields/Solicited__c.field-meta.xml
<CustomField>
    <fullName>Solicited__c</fullName>
    <description>Was the review solicited by a Ubiquity team member?</description>
    <inlineHelpText>Was the review solicited by a Ubiquity team member?</inlineHelpText>
    <label>Solicited</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>